Added more description of the project

--- a/Data_vizualisation.ipynb
+++ b/Data_vizualisation.ipynb
@@ -5,6 +5,32 @@
    "id": "1216e5b0",
    "metadata": {},
    "source": [
+    "# Insurance Charges Analysis Using Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c48b52",
+   "metadata": {},
+   "source": [
+    "**Project Overview:**  \n",
+    "This project focuses on analyzing health insurance data from ACME Insurance Inc., a provider of affordable healthcare plans to thousands of customers across the U.S. The dataset contains records from more than 1,300 individuals. By utilizing features such as age, gender, BMI, number of dependents, smoking habits, and geographic region, the objective is to develop a Linear Regression model to accurately predict insurance charges.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7767475",
+   "metadata": {},
+   "source": [
+    "This project was guided by the folowing tutorial: https://jovian.ai/aakashns/python-sklearn-linear-regression#C206"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e778aa7",
+   "metadata": {},
+   "source": [
     "# Imported libraries"
    ]
   },
@@ -9695,6 +9721,19 @@
     "\n",
     "loss = rmse(targets, predictions)\n",
     "print('Loss:', loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39aab33c",
+   "metadata": {},
+   "source": [
+    "**Conclusion**  \n",
+    "This analysis highlights the effectiveness of using linear regression to identify key factors influencing medical insurance charges. By applying Ordinary Least Squares (OLS) regression, we were able to measure the impact of several variables—particularly smoking status and age—on annual healthcare costs. The results clearly showed that smokers face substantially higher charges, a pattern that becomes even more pronounced when combined with age and BMI. In contrast, variables like sex and the number of children had minimal direct impact.\n",
+    "\n",
+    "Seaborn visualizations helped illustrate these relationships clearly. Scatter plots and regression lines made the differences between smokers and non-smokers more evident, while the residual plot indicated that our model successfully captured the core trends in the data, validating the suitability of a linear approach.\n",
+    "\n",
+    "Overall, this project reinforces the importance of careful feature selection and proper handling of categorical variables in predictive modeling. It demonstrates how combining statistical methods with visual analysis can lead to meaningful insights, particularly in the context of healthcare cost prediction."
    ]
   }
  ],
