fixing orthographe mistakes

--- a/Data_vizualisation.ipynb
+++ b/Data_vizualisation.ipynb
@@ -9083,7 +9083,7 @@
    "id": "d0d56db1",
    "metadata": {},
    "source": [
-    "# Linear Regression using a Sing Feature"
+    "# Linear Regression using a Single Feature"
    ]
   },
   {
